# nav-insights

./: .env.example  .gitignore  AGENT_ASSIGNMENTS.md  ARCHITECTURE.md  CLAUDE.md  FINDINGS.md  ISSUES.md  PLAN_DSL_HARDENING.md  PROBLEM_DEFINITION.md  README.md  RFC.md  WORKTREE_SETUP.md  claude-review.sh  eval.jsonl  insight.schema.json  nav_insights_ISSUES.md  pyproject.toml  rules.sample.yaml  train.jsonl
.claude/commands/: fix-issue-for-ci-tests.md  review-claude-review-pr.md  work-on-issue.md
.github/: dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: ci.yml
docs/mappings/paid_search/: competitor_insights_to_ir.md  keyword_analyzer_to_ir.md  negative_conflicts_to_ir.md  placement_audit_to_ir.md  search_terms_to_ir.md  video_creative_to_ir.md
examples/: compose_search_example.py  eval.jsonl  sample_ir_search.json
examples/demo_cases/case_001/: actions.json  findings.json
examples/demo_cases/case_002/: actions.json  findings.json
nav_insights/: __init__.py  cli.py  dataset_builder.py  llm_llamacpp.py  schemas.py  service.py
nav_insights/core/: __init__.py  actions.py  dsl.py  dsl_exceptions.py  errors.py  findings_ir.py  insight.py  ir_base.py  rules.py  utils.py  validation.py  writer.py
nav_insights/domains/clv/: ir.py
nav_insights/domains/paid_search/: ir.py
nav_insights/domains/paid_search/rules/: default.yaml
nav_insights/domains/paid_social/: ir.py
nav_insights/integrations/: __init__.py
nav_insights/integrations/paid_search/: __init__.py  competitor_insights.py  keyword_analyzer.py  placement_audit.py  search_terms.py  utils.py  video_creative.py
reviews/nav_insights/: pr-55-dsl-testing-20250825_1607.md
schemas/paid_search/: competitor_insights.json  keyword_analyzer.json  placement_audit.json  search_terms.json  video_creative.json
scripts/: check_imports.py  export_schemas.py  generate_schemas.py  smoke_tests.py  validate_fixtures.py
tests/: test_cli.py  test_core_ir_base_types.py  test_core_utils.py  test_dsl.py  test_dsl_basic.py  test_dsl_issue54.py  test_generate_schemas.py  test_import_guardrails.py  test_ir_validation.py  test_negative_conflicts_mapping.py  test_rules_engine.py  test_validate_fixtures.py
tests/core/: test_errors.py
tests/fixtures/: keyword_analyzer_edge_case.json  keyword_analyzer_happy_path.json  negative_conflicts_fixture_edge_case.json  negative_conflicts_fixture_happy_path.json  placement_audit_edge_case.json  placement_audit_happy_path.json  search_fixture_1.json  search_fixture_2.json  social_fixture_1.json  social_fixture_2.json  video_creative_edge_case.json  video_creative_happy_path.json
tests/integrations/: test_paid_search_parsers.py
