[project]
name = "nav_insights"
version = "0.1.0"
description = "Reusable insights engine: IR schemas, rules runtime, and tiny-LLM writer."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "pydantic>=2.6",
    "jinja2>=3.1",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
service = [
    "fastapi>=0.112",
    "uvicorn[standard]>=0.30",
]
