[project]
name = "nav_insights"
version = "0.1.0"
description = "Reusable insights engine: IR schemas, rules runtime, and tiny-LLM writer."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "pydantic>=2.6",
    "jinja2>=3.1",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
service = [
    "fastapi>=0.112",
    "uvicorn[standard]>=0.30",
]

[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "."}

[tool.setuptools.packages.find]
where = ["."]
include = ["nav_insights"]

[tool.ruff]
line-length = 100
# Lowest common target across CI matrix
target-version = "py310"

[tool.ruff.lint]
select = [
  "E",  # pycodestyle errors
  "F"   # pyflakes
]
ignore = [
  "E203", # whitespace before ':' (black-compatible)
  "E501"  # line length handled by ruff format
]

[tool.ruff.lint.isort]
known-first-party = ["nav_insights"]
combine-as-imports = true

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "lf"

[dependency-groups]
dev = [
    "pytest>=8.4.1",
]

[tool.ruff.lint.per-file-ignores]
"tests/**.py" = ["E501"]
"examples/**.py" = ["E501"]
